# giganto

./: .gitignore  CHANGELOG.md  CHRONO_FIELD_ANALYSIS.md  Cargo.toml  README.md  biome.json  build.rs  cleanup.py  clippy.toml  mkdocs.yml  resolve_conflict.py
.cargo/: config.toml
.github/cache-cargo/: action.yml
.github/workflows/: add-to-project.yml  ci.yml  release.yml
docs/: bootroot-mtls-validation.md  guide-giganto-cluster-graphql.md  theme.toml
docs/en/: bootroot-validation.md  configuration.md  graphql.md  index.md  operations.md  prerequisites.md  troubleshooting.md
docs/ko/: bootroot-validation.md  configuration.md  graphql.md  index.md  operations.md  prerequisites.md  troubleshooting.md
docs/pdf/: cover.html.j2  styles.scss
docs/styles/: lists.css  pdf.css
examples/: protocol_templates.md
giganto-client/: CHANGELOG.md  Cargo.toml
giganto-client/src/: connection.rs  frame.rs  ingest.rs  lib.rs  publish.rs  test.rs
giganto-client/src/ingest/: log.rs  network.rs  statistics.rs  timeseries.rs
giganto-client/src/publish/: range.rs  stream.rs
scripts/: bootroot-mtls-validation.config.toml.in  bootroot-mtls-validation.sh  build-docs-pdf.sh  count_conn_by_orig_range.py  count_conn_by_orig_range.sh  count_conn_events.py  count_http_events.py  fetch-theme.sh
src/: bincode_utils.rs  cancellation.rs  chrono_jiff_equivalence_tests.rs  comm.rs  datetime.rs  gen_schema.rs  graphql.rs  ingest.rs  ingestion.rs  lib.rs  main.rs  peer.rs  publish.rs  redis.rs  server.rs  settings.rs  shutdown.rs  storage.rs  test_bootroot.rs  tls_reload.rs  web.rs
src/comm/: ingest.rs  mod.rs  peer.rs  publish.rs  stream_channel_key.rs  transfer.rs
src/comm/ingest/: generation.rs  implement.rs  tests.rs
src/comm/publish/: implement.rs  tests.rs
src/graphql/: client.rs  customer_deletion.rs  delete.rs  export.rs  log.rs  netflow.rs  network.rs  packet.rs  search.rs  security.rs  sensor.rs  source.rs  standalone.rs  statistics.rs  status.rs  sysmon.rs  template.rs  timeseries.rs
src/graphql/client/: cluster.rs  derives.rs
src/graphql/client/schema/: bootp_raw_events.graphql  conn_raw_events.graphql  csv_formatted_raw_events.graphql  dce_rpc_raw_events.graphql  dhcp_raw_events.graphql  dns_query_events.graphql  dns_raw_events.graphql  export.graphql  file_create_events.graphql  file_create_stream_hash_events.graphql  file_create_time_events.graphql  file_delete_detected_events.graphql  file_delete_events.graphql  ftp_raw_events.graphql  http_raw_events.graphql  icmp_raw_events.graphql  image_load_events.graphql  kerberos_raw_events.graphql  ldap_raw_events.graphql  log_raw_events.graphql  malformed_dns_raw_events.graphql  mqtt_raw_events.graphql  netflow5_raw_events.graphql  netflow9_raw_events.graphql  network_connect_events.graphql  network_raw_events.graphql  nfs_raw_events.graphql  ntlm_raw_events.graphql  op_log_raw_events.graphql  packets.graphql  pcap.graphql  periodic_time_series.graphql  pipe_event_events.graphql  process_create_events.graphql  process_tamper_events.graphql  process_terminate_events.graphql  radius_raw_events.graphql  rdp_raw_events.graphql  registry_key_rename_events.graphql  registry_value_set_events.graphql  (+44 more)
src/graphql/export/: netflow.rs  tests.rs
src/graphql/export/tests/: fixture.rs
src/graphql/log/: tests.rs
src/graphql/network/: tests.rs
src/graphql/sysmon/: tests.rs
src/graphql/sysmon/tests/: fixtures.rs
src/ingest/: generation.rs  implement.rs  log.rs  network.rs  tests.rs
src/ingestion/: log.rs  network.rs  statistics.rs  tests.rs
src/publish/: implement.rs  tests.rs
src/storage/: customer_deletion_jobs.rs  migration.rs
src/storage/migration/: migration_structures.rs
tests/: cert.der  cert.pem  common.rs  config.toml  ingestion.rs  key.der  key.pem  root.pem
tests/certs/: ca_cert.pem
tests/certs/node1/: cert.pem  config.toml  key.pem
tests/certs/node2/: cert.pem  key.pem
tools/bootroot-validation/: .gitignore  data-store.env.template  generate-fixtures.sh  smoke-check.sh  start-validation.sh
tools/bootroot-validation/checked-fixtures/: .gitkeep
