[package]
name = "giganto"
version = "0.21.0-alpha.2"
edition = "2021"

[lib]
name = "giganto_proc_macro"
proc-macro = true

[[bin]]
name = "giganto"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "7.0", features = ["chrono", "string_number"] }
async-graphql-warp = "7.0"
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.14", features = ["toml"], default-features = false }
ctrlc = { version = "3", features = ["termination"] }
data-encoding = "2.4"
deluxe = "0.5"
directories = "5.0"
futures-util = "0.3"
giganto-client = { git = "https://github.com/aicers/giganto-client.git", rev = "cc83f71" }
graphql_client = "0.14"
humantime-serde = "1"
libc = "0.2"
num_enum = "0.7"
num-traits = "0.2"
pcap = "2"
proc-macro2 = "1.0"
quinn = { version = "0.11", features = ["ring"] }
quote = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rocksdb = "0.22"
roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.2.1" }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2.0"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml_edit = "0.22"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
warp = { version = "0.3", features = ["tls"] }
x509-parser = "0.16"

[dev-dependencies]
mockito = "1.2.0"
regex = "1"
serial_test = "3.0.0"
tempfile = "3"
url = "2"

[features]
default = ["benchmark"]
benchmark = []
