[package]
name = "giganto"
version = "0.26.0-alpha.4"
edition = "2024"
default-run = "giganto"

[lib]
name = "giganto_proc_macro"
proc-macro = true

[[bin]]
name = "giganto"

[[bin]]
name = "gen_schema"
path = "src/gen_schema.rs"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["chrono", "string_number"] }
base64 = "0.22"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"], default-features = false }
ctrlc = { version = "3", features = ["termination"] }
data-encoding = "2"
deluxe = "0.5"
futures-util = "0.3"
giganto-client = { git = "https://github.com/aicers/giganto-client.git", rev = "f52f942" }
graphql_client = "0.14"
humantime = "2"
humantime-serde = "1"
libc = "0.2"
num_enum = "0.7"
num-traits = "0.2"
pcap = "2"
proc-macro2 = "1"
quinn = { version = "0.11", features = ["ring"] }
quote = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rocksdb = "0.24"
roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.5.0" }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
toml_edit = "0.23"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.18"
poem = { version = "3", features = ["rustls"] }
tokio-rustls = "0.26"
async-graphql-poem = "7"

[dev-dependencies]
mockito = "1"
regex = "1"
serial_test = "3"
tempfile = "3"
url = "2"

[features]
default = ["benchmark", "cluster"]
benchmark = []
cluster = []

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
