[package]
name = "giganto-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
num_enum = "0.5"
oinq = { git = "https://github.com/petabi/oinq.git", tag = "0.6.0" }
quinn = "0.9"
semver = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = "1"
